--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -508,9 +508,13 @@
                                         <div class="subscription__field input input--inverted">
                                             <input class="input__widget" type="tel" placeholder="Телефон" required>
                                         </div>
-                                        <div class="subscription__terms">
-                                            Согласен(а) на&nbsp;обработку персональных данных
-                                        </div>
+                                        <label class="subscription__terms term">
+                                            <input class="term__widget" type="checkbox">
+                                            <span class="term__label">Согласен(а) на обработку персональных данных</span>
+                                            <i class="term__icon" role="presentation">
+                                                <i class="term__check"></i>
+                                            </i>
+                                        </label>
                                     </div>
                                     <button class="subscription__submit button button--secondary" type="submit">
                                         Записаться на пробный урок
