--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,5 +46,6 @@
 @import url("_alert.css");
 @import url("_notifications-center.css");
 @import url("_desktop-only.css");
+@import url("_term.css");
 
 
