--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -509,7 +509,7 @@
                                             <input class="input__widget" type="tel" placeholder="Телефон" required>
                                         </div>
                                         <label class="subscription__terms term">
-                                            <input class="term__widget" type="checkbox">
+                                            <input class="term__widget" type="checkbox" required>
                                             <span class="term__label">Согласен(а) на обработку персональных данных</span>
                                             <i class="term__icon" role="presentation">
                                                 <i class="term__check"></i>
