--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -56,8 +56,34 @@
         <![endif]-->
 
 
-        <section class="feedback container">
+        <section class="summary">
+            <h2 class="summary__heading title container">
+                ЕГЭ Студия готовит к ЕГЭ и ОГЭ с 2008 года
+            </h2>
+            <div class="summary__line">
+                <div class="summary__item">
+                    <strong class="summary__unit">3000</strong>
+                    <span class="summary__value">выпускников</span>
+                </div>
+                <div class="summary__item">
+                    <strong class="summary__unit">98</strong>
+                    <span class="summary__value">средний балл</span>
+                </div>
+                <div class="summary__item">
+                    <strong class="summary__unit">300</strong>
+                    <span class="summary__value">Сдали на 90+</span>
+                </div>
+                <div class="summary__item">
+                    <strong class="summary__unit">300 000</strong>
+                    <span class="summary__value">просмотров обучающих роликов на&nbsp;YouTube</span>
+                </div>
+            </div>
+        </section>
 
+        <section class="feedback container">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores deleniti exercitationem impedit minima modi perspiciatis placeat quis reiciendis saepe tempore. Asperiores itaque reiciendis soluta! Iusto, odit quam qui sapiente totam veritatis voluptatum. Ab animi assumenda aut consequatur cupiditate, dignissimos dolor, dolorum earum error eum ex explicabo facilis iure labore laudantium maiores molestias mollitia pariatur perspiciatis quibusdam quos repellat repudiandae saepe, sequi sit unde veritatis vero! Corporis fugit ipsam molestias nam praesentium, provident recusandae rerum sed! Accusantium alias aspernatur autem corporis dolorem exercitationem, minus nemo nostrum nulla officiis possimus quaerat quam quia rem saepe sequi similique vero vitae voluptate voluptates. Eligendi.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores deleniti exercitationem impedit minima modi perspiciatis placeat quis reiciendis saepe tempore. Asperiores itaque reiciendis soluta! Iusto, odit quam qui sapiente totam veritatis voluptatum. Ab animi assumenda aut consequatur cupiditate, dignissimos dolor, dolorum earum error eum ex explicabo facilis iure labore laudantium maiores molestias mollitia pariatur perspiciatis quibusdam quos repellat repudiandae saepe, sequi sit unde veritatis vero! Corporis fugit ipsam molestias nam praesentium, provident recusandae rerum sed! Accusantium alias aspernatur autem corporis dolorem exercitationem, minus nemo nostrum nulla officiis possimus quaerat quam quia rem saepe sequi similique vero vitae voluptate voluptates. Eligendi.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores deleniti exercitationem impedit minima modi perspiciatis placeat quis reiciendis saepe tempore. Asperiores itaque reiciendis soluta! Iusto, odit quam qui sapiente totam veritatis voluptatum. Ab animi assumenda aut consequatur cupiditate, dignissimos dolor, dolorum earum error eum ex explicabo facilis iure labore laudantium maiores molestias mollitia pariatur perspiciatis quibusdam quos repellat repudiandae saepe, sequi sit unde veritatis vero! Corporis fugit ipsam molestias nam praesentium, provident recusandae rerum sed! Accusantium alias aspernatur autem corporis dolorem exercitationem, minus nemo nostrum nulla officiis possimus quaerat quam quia rem saepe sequi similique vero vitae voluptate voluptates. Eligendi.
         </section>
 
         <section class="results">
