--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,5 +47,7 @@
 @import url("_notifications-center.css");
 @import url("_desktop-only.css");
 @import url("_term.css");
+@import url("_summary.css");
+@import url("_feedback.css");
 
 
