--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -81,9 +81,70 @@
         </section>
 
         <section class="feedback container">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores deleniti exercitationem impedit minima modi perspiciatis placeat quis reiciendis saepe tempore. Asperiores itaque reiciendis soluta! Iusto, odit quam qui sapiente totam veritatis voluptatum. Ab animi assumenda aut consequatur cupiditate, dignissimos dolor, dolorum earum error eum ex explicabo facilis iure labore laudantium maiores molestias mollitia pariatur perspiciatis quibusdam quos repellat repudiandae saepe, sequi sit unde veritatis vero! Corporis fugit ipsam molestias nam praesentium, provident recusandae rerum sed! Accusantium alias aspernatur autem corporis dolorem exercitationem, minus nemo nostrum nulla officiis possimus quaerat quam quia rem saepe sequi similique vero vitae voluptate voluptates. Eligendi.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores deleniti exercitationem impedit minima modi perspiciatis placeat quis reiciendis saepe tempore. Asperiores itaque reiciendis soluta! Iusto, odit quam qui sapiente totam veritatis voluptatum. Ab animi assumenda aut consequatur cupiditate, dignissimos dolor, dolorum earum error eum ex explicabo facilis iure labore laudantium maiores molestias mollitia pariatur perspiciatis quibusdam quos repellat repudiandae saepe, sequi sit unde veritatis vero! Corporis fugit ipsam molestias nam praesentium, provident recusandae rerum sed! Accusantium alias aspernatur autem corporis dolorem exercitationem, minus nemo nostrum nulla officiis possimus quaerat quam quia rem saepe sequi similique vero vitae voluptate voluptates. Eligendi.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores deleniti exercitationem impedit minima modi perspiciatis placeat quis reiciendis saepe tempore. Asperiores itaque reiciendis soluta! Iusto, odit quam qui sapiente totam veritatis voluptatum. Ab animi assumenda aut consequatur cupiditate, dignissimos dolor, dolorum earum error eum ex explicabo facilis iure labore laudantium maiores molestias mollitia pariatur perspiciatis quibusdam quos repellat repudiandae saepe, sequi sit unde veritatis vero! Corporis fugit ipsam molestias nam praesentium, provident recusandae rerum sed! Accusantium alias aspernatur autem corporis dolorem exercitationem, minus nemo nostrum nulla officiis possimus quaerat quam quia rem saepe sequi similique vero vitae voluptate voluptates. Eligendi.
+            <h2 class="feedback__heading title">
+                Отзывы учеников
+            </h2>
+            <div class="feedback__body">
+
+                <!-- Slider main container -->
+                <div class="swiper swiper--feedback">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide">
+                            <div class="review">
+                                <div class="review__message">
+                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                </div>
+                                <div class="review__author">
+                                    Наталья
+                                </div>
+                                <div class="review__rating">
+                                    <div class="rating">
+                                        <div class="rating__value" style="width: 90%"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            2
+                        </div>
+                        <div class="swiper-slide">
+                            3
+                        </div>
+                        <div class="swiper-slide">
+                            4
+                        </div>
+                        <div class="swiper-slide">
+                            5
+                        </div>
+                        <div class="swiper-slide">
+                            6
+                        </div>
+                        <div class="swiper-slide">
+                            7
+                        </div>
+                        <div class="swiper-slide">
+                            8
+                        </div>
+                        <div class="swiper-slide">
+                            9
+                        </div>
+                    </div>
+
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+
+                    <!-- If we need scrollbar -->
+                    <div class="swiper-scrollbar"></div>
+                </div>
+
+
+            </div>
         </section>
 
         <section class="results">
