--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,5 +49,7 @@
 @import url("_term.css");
 @import url("_summary.css");
 @import url("_feedback.css");
+@import url("_review.css");
+@import url("_rating.css");
 
 
