--- a/src/styles/_feedback.css
+++ b/src/styles/_feedback.css
@@ -1,3 +1,12 @@
 .feedback {
     margin-top: 120px;
 }
+    .feedback__heading {
+        margin-top: 0;
+        margin-bottom: 0;
+        text-align: center;
+    }
+
+    .feedback__body {
+
+    }
