feedback slider width draft

--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -90,7 +90,6 @@
                 <div class="swiper swiper--feedback">
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
-                        <!-- Slides -->
                         <div class="swiper-slide">
                             <div class="review">
                                 <div class="review__message">
@@ -107,28 +106,124 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            2
+                            <div class="review">
+                                <div class="review__message">
+                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                </div>
+                                <div class="review__author">
+                                    Наталья
+                                </div>
+                                <div class="review__rating">
+                                    <div class="rating">
+                                        <div class="rating__value" style="width: 90%"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="swiper-slide">
-                            3
+                            <div class="review">
+                                <div class="review__message">
+                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                </div>
+                                <div class="review__author">
+                                    Наталья
+                                </div>
+                                <div class="review__rating">
+                                    <div class="rating">
+                                        <div class="rating__value" style="width: 90%"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="swiper-slide">
-                            4
+                            <div class="review">
+                                <div class="review__message">
+                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                </div>
+                                <div class="review__author">
+                                    Наталья
+                                </div>
+                                <div class="review__rating">
+                                    <div class="rating">
+                                        <div class="rating__value" style="width: 90%"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="swiper-slide">
-                            5
+                            <div class="review">
+                                <div class="review__message">
+                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                </div>
+                                <div class="review__author">
+                                    Наталья
+                                </div>
+                                <div class="review__rating">
+                                    <div class="rating">
+                                        <div class="rating__value" style="width: 90%"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="swiper-slide">
-                            6
+                            <div class="review">
+                                <div class="review__message">
+                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                </div>
+                                <div class="review__author">
+                                    Наталья
+                                </div>
+                                <div class="review__rating">
+                                    <div class="rating">
+                                        <div class="rating__value" style="width: 90%"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="swiper-slide">
-                            7
+                            <div class="review">
+                                <div class="review__message">
+                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                </div>
+                                <div class="review__author">
+                                    Наталья
+                                </div>
+                                <div class="review__rating">
+                                    <div class="rating">
+                                        <div class="rating__value" style="width: 90%"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="swiper-slide">
-                            8
+                            <div class="review">
+                                <div class="review__message">
+                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                </div>
+                                <div class="review__author">
+                                    Наталья
+                                </div>
+                                <div class="review__rating">
+                                    <div class="rating">
+                                        <div class="rating__value" style="width: 90%"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="swiper-slide">
-                            9
+                            <div class="review">
+                                <div class="review__message">
+                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                </div>
+                                <div class="review__author">
+                                    Наталья
+                                </div>
+                                <div class="review__rating">
+                                    <div class="rating">
+                                        <div class="rating__value" style="width: 90%"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
