--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide--wide">
                             <div class="review">
                                 <div class="review__message">
                                     Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
@@ -150,7 +150,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide--wide">
                             <div class="review">
                                 <div class="review__message">
                                     Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
@@ -195,7 +195,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide--wide">
                             <div class="review">
                                 <div class="review__message">
                                     Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
