--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -86,153 +86,163 @@
             </h2>
             <div class="feedback__body">
 
-                <!-- Slider main container -->
-                <div class="swiper swiper--feedback">
-                    <!-- Additional required wrapper -->
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                <div class="slider">
+                    <div class="swiper swiper--feedback">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="review">
+                                    <div class="review__message">
+                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                    </div>
+                                    <div class="review__author">
+                                        Наталья
+                                    </div>
+                                    <div class="review__rating">
+                                        <div class="rating">
+                                            <div class="rating__value" style="width: 90%"></div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="review__author">
-                                    Наталья
+                            </div>
+                            <div class="swiper-slide swiper-slide--wide">
+                                <div class="review">
+                                    <div class="review__message">
+                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                    </div>
+                                    <div class="review__author">
+                                        Наталья
+                                    </div>
+                                    <div class="review__rating">
+                                        <div class="rating">
+                                            <div class="rating__value" style="width: 90%"></div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="review">
+                                    <div class="review__message">
+                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                    </div>
+                                    <div class="review__author">
+                                        Наталья
+                                    </div>
+                                    <div class="review__rating">
+                                        <div class="rating">
+                                            <div class="rating__value" style="width: 90%"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="review">
+                                    <div class="review__message">
+                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                    </div>
+                                    <div class="review__author">
+                                        Наталья
+                                    </div>
+                                    <div class="review__rating">
+                                        <div class="rating">
+                                            <div class="rating__value" style="width: 90%"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide swiper-slide--wide">
+                                <div class="review">
+                                    <div class="review__message">
+                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                    </div>
+                                    <div class="review__author">
+                                        Наталья
+                                    </div>
+                                    <div class="review__rating">
+                                        <div class="rating">
+                                            <div class="rating__value" style="width: 90%"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="review">
+                                    <div class="review__message">
+                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                    </div>
+                                    <div class="review__author">
+                                        Наталья
+                                    </div>
+                                    <div class="review__rating">
+                                        <div class="rating">
+                                            <div class="rating__value" style="width: 90%"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="review">
+                                    <div class="review__message">
+                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                    </div>
+                                    <div class="review__author">
+                                        Наталья
+                                    </div>
+                                    <div class="review__rating">
+                                        <div class="rating">
+                                            <div class="rating__value" style="width: 90%"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide swiper-slide--wide">
+                                <div class="review">
+                                    <div class="review__message">
+                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                    </div>
+                                    <div class="review__author">
+                                        Наталья
+                                    </div>
+                                    <div class="review__rating">
+                                        <div class="rating">
+                                            <div class="rating__value" style="width: 90%"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="review">
+                                    <div class="review__message">
+                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                    </div>
+                                    <div class="review__author">
+                                        Наталья
+                                    </div>
+                                    <div class="review__rating">
+                                        <div class="rating">
+                                            <div class="rating__value" style="width: 90%"></div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide swiper-slide--wide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
-                                </div>
-                                <div class="review__author">
-                                    Наталья
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
-                                    </div>
-                                </div>
-                            </div>
+
+                        <div class="swiper-pagination">
+
                         </div>
-                        <div class="swiper-slide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
-                                </div>
-                                <div class="review__author">
-                                    Наталья
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
-                                </div>
-                                <div class="review__author">
-                                    Наталья
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide swiper-slide--wide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
-                                </div>
-                                <div class="review__author">
-                                    Наталья
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
-                                </div>
-                                <div class="review__author">
-                                    Наталья
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
-                                </div>
-                                <div class="review__author">
-                                    Наталья
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide swiper-slide--wide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
-                                </div>
-                                <div class="review__author">
-                                    Наталья
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
-                                </div>
-                                <div class="review__author">
-                                    Наталья
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
 
-                    <!-- If we need pagination -->
-                    <div class="swiper-pagination"></div>
+                    <div class="slider__button slider__button--prev">
+                        <svg class="swiper-arrow" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path fill="#FC5E38" fill-rule="evenodd" d="M7.205 11.204c-.44.44-.44 1.152 0 1.591l6.75 6.75a1.125 1.125 0 0 0 1.59-1.59L9.591 12l5.955-5.955a1.125 1.125 0 0 0-1.591-1.59l-6.75 6.75Z" clip-rule="evenodd"/>
+                        </svg>
+                    </div>
 
-                    <!-- If we need navigation buttons -->
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
+                    <div class="slider__button slider__button--next">
+                        <svg class="swiper-arrow" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path fill="#FC5E38" fill-rule="evenodd" d="M16.796 11.204c.439.44.439 1.152 0 1.591l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59L14.409 12 8.455 6.045a1.125 1.125 0 1 1 1.59-1.59l6.75 6.75Z" clip-rule="evenodd"/>
+                        </svg>
+                    </div>
 
                 </div>
 
