--- a/src/styles/_slider.css
+++ b/src/styles/_slider.css
@@ -3,7 +3,7 @@
 }
     /* Стрелочки */
 
-    .slider__button {
+    .swiper-button {
         position: absolute;
         top: 0;
         bottom: 0;
@@ -11,6 +11,8 @@
         align-items: center;
         justify-content: center;
         width: 120px;
+        height: auto;
+        margin: 0;
         padding: 0;
         border: none;
         background-color: transparent;
@@ -18,24 +20,32 @@
         transition: background-color var(--transition-hover);
     }
 
-    .slider__button:not(.swiper-button-disabled):hover {
+    .swiper-button:not(.swiper-button-disabled):hover {
         background-color: rgb(255 255 255 / 40%);
         border-radius: 8px;
     }
 
-    .slider__button.swiper-button-disabled {
+    .swiper-button.swiper-button-disabled {
         opacity: 50%;
         cursor: default;
     }
 
-    .slider__button--prev {
+    .swiper-button-prev {
         left: -130px;
+        right: auto;
     }
 
-    .slider__button--next {
+    .swiper-button-next {
         right: -130px;
+        left: auto;
     }
         .slider__arrow {
             vertical-align: top;
+            width: 24px !important;
+            height: 24px !important;
+        }
+
+        .swiper-button::after {
+            display: none;
         }
 
