--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -92,14 +92,14 @@
                             <div class="swiper-slide">
                                 <div class="review">
                                     <div class="review__message">
-                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                        Очень доволен обучением! Курсы помогли мне значительно улучшить мои навыки и подготовиться к экзаменам. Рекомендую всем, кто хочет получить качественное образование.
                                     </div>
                                     <div class="review__author">
-                                        Наталья
+                                        Алексей
                                     </div>
                                     <div class="review__rating">
                                         <div class="rating">
-                                            <div class="rating__value" style="width: 90%"></div>
+                                            <div class="rating__value" style="width: 95%"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -107,10 +107,10 @@
                             <div class="swiper-slide swiper-slide--wide">
                                 <div class="review">
                                     <div class="review__message">
-                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                        Прекрасные курсы! Обучение проходит в удобное время, материалы доступны и понятны. Большое спасибо преподавателям за их труд и профессионализм.
                                     </div>
                                     <div class="review__author">
-                                        Наталья
+                                        Мария
                                     </div>
                                     <div class="review__rating">
                                         <div class="rating">
@@ -122,14 +122,14 @@
                             <div class="swiper-slide">
                                 <div class="review">
                                     <div class="review__message">
-                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                        Отличная программа обучения, которая помогла мне быстро и эффективно подготовиться к экзаменам. Рад, что выбрал именно этот курс.
                                     </div>
                                     <div class="review__author">
-                                        Наталья
+                                        Иван
                                     </div>
                                     <div class="review__rating">
                                         <div class="rating">
-                                            <div class="rating__value" style="width: 90%"></div>
+                                            <div class="rating__value" style="width: 92%"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -137,14 +137,14 @@
                             <div class="swiper-slide">
                                 <div class="review">
                                     <div class="review__message">
-                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                        Программы действительно помогают углубить знания и развить навыки. Рекомендую всем, кто хочет улучшить свои результаты.
                                     </div>
                                     <div class="review__author">
-                                        Наталья
+                                        Ольга
                                     </div>
                                     <div class="review__rating">
                                         <div class="rating">
-                                            <div class="rating__value" style="width: 90%"></div>
+                                            <div class="rating__value" style="width: 88%"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -152,14 +152,14 @@
                             <div class="swiper-slide swiper-slide--wide">
                                 <div class="review">
                                     <div class="review__message">
-                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                        Спасибо за отличные материалы и поддержку. Благодаря курсам я смог успешно сдать экзамены и поступить в университет.
                                     </div>
                                     <div class="review__author">
-                                        Наталья
+                                        Дмитрий
                                     </div>
                                     <div class="review__rating">
                                         <div class="rating">
-                                            <div class="rating__value" style="width: 90%"></div>
+                                            <div class="rating__value" style="width: 93%"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -167,14 +167,14 @@
                             <div class="swiper-slide">
                                 <div class="review">
                                     <div class="review__message">
-                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                        Курсы были очень полезны и помогли мне понять сложные темы. Преподаватели всегда готовы помочь и ответить на все вопросы.
                                     </div>
                                     <div class="review__author">
-                                        Наталья
+                                        Елена
                                     </div>
                                     <div class="review__rating">
                                         <div class="rating">
-                                            <div class="rating__value" style="width: 90%"></div>
+                                            <div class="rating__value" style="width: 89%"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -182,14 +182,14 @@
                             <div class="swiper-slide">
                                 <div class="review">
                                     <div class="review__message">
-                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                        Очень профессиональный подход и отличные материалы. Благодаря курсам я улучшил свои знания и навыки.
                                     </div>
                                     <div class="review__author">
-                                        Наталья
+                                        Сергей
                                     </div>
                                     <div class="review__rating">
                                         <div class="rating">
-                                            <div class="rating__value" style="width: 90%"></div>
+                                            <div class="rating__value" style="width: 94%"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -197,14 +197,14 @@
                             <div class="swiper-slide swiper-slide--wide">
                                 <div class="review">
                                     <div class="review__message">
-                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                        Прекрасное обучение! Все материалы актуальны и полезны. Спасибо за профессионализм и поддержку!
                                     </div>
                                     <div class="review__author">
-                                        Наталья
+                                        Анна
                                     </div>
                                     <div class="review__rating">
                                         <div class="rating">
-                                            <div class="rating__value" style="width: 90%"></div>
+                                            <div class="rating__value" style="width: 91%"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -212,10 +212,10 @@
                             <div class="swiper-slide">
                                 <div class="review">
                                     <div class="review__message">
-                                        Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
+                                        Отличные курсы, очень доволен результатом. Все материалы изложены понятно и доступно.
                                     </div>
                                     <div class="review__author">
-                                        Наталья
+                                        Николай
                                     </div>
                                     <div class="review__rating">
                                         <div class="rating">
