--- a/src/styles/_review.css
+++ b/src/styles/_review.css
@@ -7,6 +7,11 @@
     border: 4px solid #FFFFFF;
     border-radius: 8px;
     padding: 27px;
+    user-select: none; /* Чтобы не выделялись кусочки текста,
+                          когда пользователь кликает по стрелкам слайдера.
+                          содержимое слайдов всё-равно невозможно выделить,
+                          так как клик внутрь слайдера перехватывается drag & drop
+                        */
 }
     .review__message {
         grid-column: 1 / -1;
