--- a/src/styles/_swiper.css
+++ b/src/styles/_swiper.css
@@ -8,6 +8,10 @@
             height: auto;
         }
 
+
+
+    /* Точки */
+
     .swiper-pagination-bullets {
         padding-top: 15px;
         position: static;
@@ -48,13 +52,74 @@
                 background-color: var(--orange);
             }
 
+    @media (width < 740px) {
 
-@media (width < 740px) {
-
-    .swiper-pagination-bullet {
-        padding: 10px;
+        .swiper-pagination-bullet {
+            padding: 10px;
+        }
     }
-}
+
+
+
+    /* Стрелочки.
+       Нужно вытаскивать их из слайдера на уровень выше, чтобы они не обрезались
+       overflow-ом от слайдера. Важно, чтобы они попадали в контекст position: relative.
+     */
+
+    .swiper-button {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 120px;
+        height: auto;
+        margin: 0;
+        padding: 0;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        transition: background-color var(--transition-hover);
+    }
+
+    .swiper-button:not(.swiper-button-disabled):hover {
+        background-color: rgb(255 255 255 / 40%);
+        border-radius: 8px;
+    }
+
+    .swiper-button.swiper-button-disabled {
+        opacity: 50%;
+        cursor: default;
+    }
+
+    .swiper-button-prev {
+        left: auto;
+        right: 100%;
+    }
+
+    .swiper-button-next {
+        right: auto;
+        left: 100%;
+    }
+        .slider__arrow {
+            vertical-align: top;
+            width: 24px !important;
+            height: 24px !important;
+        }
+
+        .swiper-button::after {
+            display: none;
+        }
+
+
+    @media (width < 1420px) {
+
+        .swiper-button {
+            width: calc( (100vw - 1146px - 20px) / 2 );
+        }
+    }
+
 
 
 
@@ -111,7 +176,6 @@
         .swiper--feedback .swiper-pagination {
             display: none;
         }
-
 
     }
 
