--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -91,10 +91,10 @@
                         <div class="swiper-slide">
                             <div class="review">
                                 <div class="review__message">
-                                    Очень доволен обучением! Курсы помогли мне значительно улучшить мои навыки и подготовиться к экзаменам. Рекомендую всем, кто хочет получить качественное образование.
+                                    Методика Анны Малковой отличается простотой, логичностью и понятностью изложения и полностью соответствует утвержденной ФИПИ актуальной программе ЕГЭ по математике. Спасибо ЕГЭ-студии!
                                 </div>
                                 <div class="review__author">
-                                    Алексей
+                                    Наталья
                                 </div>
                                 <div class="review__rating">
                                     <div class="rating">
