--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -104,18 +104,8 @@
                             </div>
                         </div>
                         <div class="swiper-slide swiper-slide--wide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Прекрасные курсы! Обучение проходит в удобное время, материалы доступны и понятны. Большое спасибо преподавателям за их труд и профессионализм.
-                                </div>
-                                <div class="review__author">
-                                    Мария
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
-                                    </div>
-                                </div>
+                            <div class="video-review">
+                                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/cuztTNw4EpI?si=ZDGHqxAZ5B5JykyZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -149,18 +139,8 @@
                             </div>
                         </div>
                         <div class="swiper-slide swiper-slide--wide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Спасибо за отличные материалы и поддержку. Благодаря курсам я смог успешно сдать экзамены и поступить в университет.
-                                </div>
-                                <div class="review__author">
-                                    Дмитрий
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 93%"></div>
-                                    </div>
-                                </div>
+                            <div class="video-review">
+                                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/m8YTpthOCtQ?si=LGDSfghhYs_6nWPK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -194,18 +174,8 @@
                             </div>
                         </div>
                         <div class="swiper-slide swiper-slide--wide">
-                            <div class="review">
-                                <div class="review__message">
-                                    Прекрасное обучение! Все материалы актуальны и полезны. Спасибо за профессионализм и поддержку!
-                                </div>
-                                <div class="review__author">
-                                    Анна
-                                </div>
-                                <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 91%"></div>
-                                    </div>
-                                </div>
+                            <div class="video-review">
+                                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/9m-bg54K0N4?si=89BTUiRQxtxn0pNq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div class="swiper-slide">
