--- a/src/styles/_swiper.css
+++ b/src/styles/_swiper.css
@@ -83,10 +83,9 @@
         transition: background-color var(--transition-hover);
     }
 
-    .swiper-button:not(.swiper-button-disabled):hover {
-        background-color: rgb(255 255 255 / 40%);
-        border-radius: 8px;
-    }
+    /*.swiper-button:not(.swiper-button-disabled):hover {*/
+    /*    background-color: rgb(255 255 255 / 40%);*/
+    /*}*/
 
     .swiper-button.swiper-button-disabled {
         opacity: 50%;
@@ -102,7 +101,25 @@
         right: auto;
         left: 100%;
     }
+        /* наведение: */
+        .swiper-button::before {
+            content: "";
+            display: block;
+            position: absolute;
+            left: 10px;
+            right: 10px;
+            top: 0;
+            bottom: 0;
+            border-radius: 8px;
+            transition: background-color var(--transition-hover);
+        }
+
+        .swiper-button:hover::before {
+            background-color: rgb(255 255 255 / 50%);
+        }
+
         .slider__arrow {
+            position: relative;
             vertical-align: top;
             width: 24px !important;
             height: 24px !important;
