--- a/src/styles/_feedback.css
+++ b/src/styles/_feedback.css
@@ -11,3 +11,22 @@
         position: relative;
         margin-top: 70px;
     }
+
+
+
+@media (width < 740px) {
+
+    .feedback {
+        margin-top: 90px;
+    }
+        .feedback__heading {
+            /*margin-top: 0;*/
+            /*margin-bottom: 0;*/
+            /*text-align: center;*/
+        }
+
+        .feedback__body {
+            /*position: relative;*/
+            margin-top: 40px;
+        }
+}
