--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -56,6 +56,54 @@
         <![endif]-->
 
 
+        <section class="welcome container container--wide">
+            <div class="welcome__intro">
+                <h1 class="welcome__heading">
+                    Курсы подготовки к&nbsp;ЕГЭ&nbsp;2024 <span class="nobr">по <strong class="highlight">русскому языку</strong></span> с&nbsp;опытными преподавателями в&nbsp;Москве
+                </h1>
+                <button class="welcome__action button" type="button">
+                    Записаться на пробный урок
+                    <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
+                        <path d="M11.767 4.955c.44-.44 1.152-.44 1.591 0l6.75 6.75c.44.439.44 1.151 0 1.59l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59l4.83-4.83H4.686a1.125 1.125 0 0 1 0-2.25h11.91l-4.83-4.83a1.125 1.125 0 0 1 0-1.59Z"/>
+                    </svg>
+                </button>
+                <div class="welcome__rating">
+                    <div class="welcome__rating-heading">
+                        Наш рейтинг за 16 лет работы
+                    </div>
+                    <div class="welcome__rating-widget">
+                        <div style="width: 150px; height: 50px; background: purple;"></div>
+                        <!-- <iframe src="https://yandex.ru/sprav/widget/rating-badge/81080480538?type=rating" width="150" height="50" frameborder="0"></iframe>-->
+                    </div>
+                </div>
+            </div>
+            <div class="welcome__features">
+                <div class="welcome__grid">
+                    <div class="welcome__tile welcome__tile--groups">
+                        <div class="welcome__tile-inner">
+                            <div class="welcome__tile-label">
+                                В группе <span class="nobr">до <strong>8</strong> человек</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="welcome__tile welcome__tile--price">
+                        <div class="welcome__tile-inner">
+                            <div class="welcome__tile-label">
+                                от <strong>550</strong> руб. <span class="nobr">за ак. час</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="welcome__tile welcome__tile--newcomers">
+                        <div class="welcome__tile-inner">
+                            <div class="welcome__tile-label">
+                                Новые группы <span class="nobr">скидка для 10-классников</span> <strong>30%</strong>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="summary">
             <h2 class="summary__heading title container">
                 ЕГЭ Студия готовит к ЕГЭ и ОГЭ с 2008 года
