--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -59,7 +59,10 @@
         <section class="welcome container container--wide">
             <div class="welcome__intro">
                 <h1 class="welcome__heading">
-                    Курсы подготовки к&nbsp;ЕГЭ&nbsp;2024 <span class="nobr">по <strong class="highlight">русскому языку</strong></span> с&nbsp;опытными преподавателями в&nbsp;Москве
+                    Курсы подготовки к&nbsp;ЕГЭ&nbsp;2024
+                    <br class="desktop-only">по <strong class="highlight">русскому языку</strong>
+                    <br class="desktop-only">с&nbsp;опытными преподавателями
+                    <br class="desktop-only">в&nbsp;Москве
                 </h1>
                 <button class="welcome__action button" type="button">
                     Записаться на пробный урок
